--- a/New folder/styles.css
+++ b/New folder/styles.css
@@ -1,9 +1,127 @@
 *{
-    background:chartreuse;
-
-
-
-
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Tahoma, Verdana, sans-serif;
+}
+html {
+    scroll-behavior: smooth;
+}
+body {
+    font-family: 'Montserrat', sans-serif;
+    /* background-color: #1378de; */
+    color: #fff;
+}
+.heard{
+    font-size: 2vw;
+    color: #000;
+    text-align: center;
+    height: 11vh;
     
 }
+.nav-bar-link{
+     position: fixed;
+     width: 100%;
+     height: 10vh;
+  }
+  
+.link {
+    float: left;
+    width: 25%;
+    background-color: #c90f0f;
 
+  }
+  
+.link a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 15px 16px;
+    text-decoration: none;
+
+}
+  
+.link a:hover {
+background-color: #111;
+}
+.section-one{
+    background:linear-gradient(black  10%, 40%, blue 80%);
+    height: 90vh;
+    padding-top:10vh ;
+} 
+.my-home{
+    width: 90vw;
+    height: 80vh;
+    margin: 5vh;
+    padding-top:1vh ;
+    background-color: rgb(57, 15, 173);
+    box-shadow: 1vh 1vw;
+    align-items: center;
+}
+.section-two{
+    background:linear-gradient(blue  20%, 40%, rgb(127, 8, 218) 80%);
+    height: 100vh;
+} 
+.section-three{
+    background:linear-gradient(rgb(127, 8, 218)  10%, 40%, blue 80%);
+    height: 100vh;
+} 
+.section-four{
+    background:linear-gradient(blue  10%, 40%, black 90%);
+    height: 100vh;
+} 
+ 
+.content{
+    
+}
+h1{
+    text-align: center;
+    font-weight:600;
+    font-size: 8vh;
+    font-family: Georgia, serif;
+}
+
+
+
+
+  
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+.sticky + .content {
+    padding-top: 102px;
+  }
+
+  
+
+  @media only screen and (max-width: 600px) {
+    body {
+      background-color: rgb(190, 31, 19);
+    }
+    .heard{
+        font-size: 2vw;
+        color: #000;
+        text-align: center;
+        height: 5vh;
+        
+    }
+    .my-home{
+        width: 90vw;
+        height: 80vh;
+        margin: 2vh;
+        padding-top:1vh ;
+        background-color: rgb(15, 173, 107);
+        box-shadow: 1vh 1vw;
+        align-items: center;
+    }
+    h1{
+        text-align: center;
+        font-weight:400;
+        font-size: 4vh;
+        font-family: Georgia, serif;
+    }
+  }
+  
