--- a/New folder/styles.css
+++ b/New folder/styles.css
@@ -11,8 +11,9 @@ html {
 }
 body {
     font-family: 'Montserrat', sans-serif;
+    background:linear-gradient(rgb(133, 15, 224)  10%, 40%, rgb(109, 5, 116) 80%);
     /* background-color: #1378de; */
-    color: #fff;
+    
 }
 h1{
     text-align: center;
@@ -61,6 +62,7 @@ background-color: #111;
     width: 90vw;
     height: 70vh;
     margin: 5vh;
+    margin-left: 2vw;
     padding-top:1vh ;
     /* background:linear-gradient(rgb(233, 41, 24)  10%, 40%, rgb(3, 3, 73) 80%); */
     /* box-shadow: 1vh 1vw; */
@@ -321,10 +323,18 @@ background-color: #111;
   
   dialog{
     animation: appear 350ms ease-in 1;
-    width: 50vw;
-    height: 50vh;
-    margin-left: 24vw;
+    width: 80vw;
+    height: 80vh;
+    margin-left: 6vw;
   
+  }
+  dialog .dialog-box{
+    align-items: center;
+    margin-top: 3vh;
+    margin-left: 2vw;
+    width: 76vw;
+    height: 70vh;
+    background-color: #721ec1;
   }
 
   .project-poto {
@@ -352,14 +362,37 @@ background-color: #111;
 .section-five{
     background:linear-gradient(rgb(109, 5, 116)  10%, 40%, blue 80%);
     height: 100vh;
-}
- 
-.content{
+    margin-top: 20vh;
     
 }
+.section-five-con{
+    width: 90vw;
+    height: 90vh;
+    margin-left:5vw ;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+   }
+ 
+.content-my{
+    display: grid;
+    grid-template-columns: auto;
+    padding: 10px;
+    
+    
+}
+.contact-my-con{
+    display: grid;
+    grid-template-columns: auto,auto;
 
+    height: 10vh;
+    margin: 5%;
+    /* background-color: #111; */
+    /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset; */
 
+}
 
+.footer{
+    
+}
 
 
 
