--- a/New folder/styles.css
+++ b/New folder/styles.css
@@ -55,8 +55,8 @@ h1{
 /* background-color: #111; */
 }
 .section-one{
-    background: linear-gradient(#d966ff  10%, 40%,#9999ff 80%); */
-    height: 90vh;
+    background: linear-gradient(#d966ff  10%, 40%,#9999ff 80%);
+    height : 90vh;
     padding-top:10vh ;
 } 
 .my-home{
@@ -73,11 +73,13 @@ h1{
     /* background-image: url(./img/background\ 1.jpeg) */
 }
 .my-home h2{
-    text-align:left;
+
+    text-align:center;
     font-weight:500;
-    font-size: 5vh;
+    font-size: 6vh;
     font-family: Georgia, serif;
     margin-top: 2vh;
+    margin-left: 3vw;
     font-variation-settings: "wght" 400;
 }
 .my-home h2:hover {
@@ -85,20 +87,32 @@ h1{
     letter-spacing: 0.5vw;
   }
 .my-home h4{
-    text-align:left;
+    text-align:center;
+    font-weight:500;
+    font-size: 4vh;
+    font-family: Georgia, serif;
+    margin-top: 1vh;
+    
+    
+
+}
+.my-home h3{
+    text-align:center;
     font-weight:500;
     font-size: 3vh;
     font-family: Georgia, serif;
     margin-top: 1vh;
-    
+    margin-left:5vw ;
+
 
 }
 .my-home p{
     text-align:left;
     font-weight:500;
-    font-size: 2vh;
+    font-size: 3vh;
     font-family: Georgia, serif;
     margin-top: 1vh;
+    margin-left:5vw ;
 
 }
 .fa {
@@ -134,7 +148,7 @@ h1{
 .section-two-grid{
     display: grid;
     grid-template-columns: auto auto;
-    padding: 10px;
+    padding: 5px;
     margin-left: 2vh;
 
 }
@@ -163,13 +177,19 @@ h1{
     outline-offset: calc(var(--s)/-2);
      --_i: calc(100% - 2*var(--s));
 }
-.section-two-grid .about-text{
+.section-two-grid .about-text h3{
+    font-size: 3.5vh;
+    font: weight 300px;
+
+}
+.section-two-grid .about-text {
     font-size: 2.5vh;
-    margin: 3vh;
+    font: weight 300px;
+    /* margin: 3vh; */
     /* background-color: #547be7; */
-    color: #4646e9;
+    color: #2c2c5f;
     padding: 2vh;
-    height: 50vh;
+    
 
 }
 .section-two-grid .about-text h3{
@@ -182,29 +202,30 @@ h1{
 
 .section-three{
     background:linear-gradient(#d966ff  10%, 40%,#9999ff 80%);
-    height: 100vh;
+    height: 110vh;
 }
 
 .qualifications{
     width: 90vw;
-    height: 90vh;
+    height: 100vh;
     margin-left:5vw ;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-   
+
 }
 .education-my ,.work-experience-my{
-    margin-top: 10vh;
+    margin-top: 5vh;
     /* background-color: #08ca49; */
 
 }
 .section-three .section-three-eduAndWork{
     width: 90vw;
+    
     max-width: 1000px;
     margin: 2rem auto;
 }
 .section-three-eduAndWork-item{
     /* background-color: #fff; */
-    color: #e98b8b;
+    color: #0a0909;
     margin: 1rem 0;
     border-radius: 0.5rem;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
@@ -217,13 +238,12 @@ h1{
     font-weight: bold;
     display: flex;
     align-items: center;
-    position: relative;
     cursor: pointer;
 }
 .section-three-eduAndWork-header::after{
     content: "\002B"; 
     font-size: 2rem;
-    position: absolute;
+    padding-left: 50vw;
     right: 1rem;
 
 }
@@ -425,7 +445,7 @@ h1{
 
 }
 .footer-my{
-    margin: ;
+    margin: auto;
 }
 
 
