add media query

--- a/New folder/styles.css
+++ b/New folder/styles.css
@@ -911,7 +911,7 @@ h1{
 /* ----------------------     -media   -------------------------------------------------------------------- */
  
     
-    
+@media only screen and (max-width: 1024px){
    
     
       
@@ -1132,4 +1132,4 @@ h1{
     }
   }
 
-  
+}
